<?xml version="1.0"?>
<package format="2">
  <name>gazebo_sim</name>
  <version>0.0.0</version>
  <description>Gazebo plugins for Livox multi-ray laser simulation and RealSense simulation environments</description>

  <maintainer email="lfc@todo.todo">lfc</maintainer>
  <maintainer email="stark.chen@connect.polyu.hk">tzhj</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>


  <depend>protobuf</depend>
  <depend>libode-dev</depend>
  <depend>libboost-system-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>eigen3</depend>
  <depend>pcl</depend>
  <depend>opencv</depend>

</package>

